--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,7 @@ sonar.links.scm=https://github.com/positive-js/mosaic
 # Path to sources
 sonar.sources=packages/cdk,packages/mosaic,packages/mosaic-moment-adapter
 sonar.inclusions=**/*.ts,**/*.js,**/*.html,**/*.scss
+sonar.exclusions=packages/mosaic/design-tokens/_palette.scss,packages/mosaic/design-tokens/_variables.scss,packages/mosaic/design-tokens/tokens.js
 
 # Path to tests
 sonar.tests=packages/cdk,packages/mosaic,packages/mosaic-moment-adapter
