--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
         "scss-bundle": "^3.1.1",
         "snyk": "^1.425.4",
         "spdx-satisfies": "^0.1.3",
-        "style-dictionary": "^2.10.2",
+        "style-dictionary": "^3.0.0-rc.2",
         "stylelint": "^13.6.1",
         "stylelint-config-standard": "^19.0.0",
         "stylelint-scss": "^3.13.0",
