added css format, renamed scss and added prefix for tokens in css

--- a/packages/mosaic/design-tokens/config.json
+++ b/packages/mosaic/design-tokens/config.json
@@ -20,6 +20,18 @@
                 }
             ]
         },
+        "css": {
+            "transformGroup": "mc/css",
+            "buildPath": "packages/mosaic/design-tokens/",
+            "files": [
+                {
+                    "destination": "tokens.css",
+                    "format": "css/variables",
+                    "filter": "notPalette",
+                    "prefix": "mc"
+                }
+            ]
+        },
         "js": {
             "transformGroup": "js",
             "buildPath": "packages/mosaic/design-tokens/",
