excluded tokens.css

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -22,6 +22,7 @@
     "ignoreFiles": [
         "packages/mosaic/design-tokens/_palette.scss",
         "packages/mosaic/design-tokens/_variables.scss",
-        "packages/mosaic/design-tokens/tokens.js"
+        "packages/mosaic/design-tokens/tokens.js",
+        "packages/mosaic/design-tokens/tokens.css"
     ]
 }
