--- a/packages/mosaic/design-tokens/components/modal.json5
+++ b/packages/mosaic/design-tokens/components/modal.json5
@@ -1,14 +1,14 @@
 {
     "modal": {
-        "light-color": {
+        "light-color-scheme": {
             "shadow": {
-                "value": "(0 0 0 1px {light-color.second.palette.value.300.value}, 0 6px 12px 0 rgba(0, 0, 0, 0.5))"
+                "value": "(0 0 0 1px {light-color-scheme.second.palette.value.300.value}, 0 6px 12px 0 rgba(0, 0, 0, 0.5))"
             },
             "background-mask": { "value": "rgba(0, 0, 0, 0.5)" }
         },
-        "dark-color": {
+        "dark-color-scheme": {
             "shadow": {
-                "value": "(0 0 0 1px {dark-color.second.palette.value.800.value}, 0 6px 12px 0 rgba(0, 0, 0, 0.5))"
+                "value": "(0 0 0 1px {dark-color-scheme.second.palette.value.800.value}, 0 6px 12px 0 rgba(0, 0, 0, 0.5))"
             },
             "background-mask": { "value": "rgba(0, 0, 0, 0.5)" }
         },
