--- a/packages/mosaic/design-tokens/components/alert.json5
+++ b/packages/mosaic/design-tokens/components/alert.json5
@@ -1,57 +1,57 @@
 {
     "alert": {
-        "light-color": {
+        "light-color-scheme": {
             "error": {
-                "background": { "value": "{light-color.error.palette.value.60.value}" },
-                "border": { "value": "{light-color.error.default.value}" },
-                "icon": { "value": "{light-color.error.default.value}" }
+                "background": { "value": "{light-color-scheme.error.palette.value.60.value}" },
+                "border": { "value": "{light-color-scheme.error.default.value}" },
+                "icon": { "value": "{light-color-scheme.error.default.value}" }
             },
             "warning": {
-                "background": { "value": "{light-color.warning.palette.value.60.value}" },
-                "border": { "value": "{light-color.warning.default.value}" },
-                "icon": { "value": "{light-color.warning.default.value}" }
+                "background": { "value": "{light-color-scheme.warning.palette.value.60.value}" },
+                "border": { "value": "{light-color-scheme.warning.default.value}" },
+                "icon": { "value": "{light-color-scheme.warning.default.value}" }
             },
             "success": {
-                "background": { "value": "{light-color.success.palette.value.60.value}" },
-                "border": { "value": "{light-color.success.default.value}" },
-                "icon": { "value": "{light-color.success.default.value}" }
+                "background": { "value": "{light-color-scheme.success.palette.value.60.value}" },
+                "border": { "value": "{light-color-scheme.success.default.value}" },
+                "icon": { "value": "{light-color-scheme.success.default.value}" }
             },
             "info": {
-                "background": { "value": "{light-color.info.palette.value.60.value}" },
-                "border": { "value": "{light-color.info.default.value}" },
-                "icon": { "value": "{light-color.info.default.value}" }
+                "background": { "value": "{light-color-scheme.info.palette.value.60.value}" },
+                "border": { "value": "{light-color-scheme.info.default.value}" },
+                "icon": { "value": "{light-color-scheme.info.default.value}" }
             },
             "default": {
-                "background": { "value": "{light-color.second.palette.value.60.value}" },
-                "border": { "value": "{light-color.second.default.value}" },
-                "icon": { "value": "{light-color.second.palette.value.200.value}" }
+                "background": { "value": "{light-color-scheme.second.palette.value.60.value}" },
+                "border": { "value": "{light-color-scheme.second.default.value}" },
+                "icon": { "value": "{light-color-scheme.second.palette.value.200.value}" }
             }
         },
-        "dark-color": {
+        "dark-color-scheme": {
             "error": {
-                "background": { "value": "{dark-color.error.palette.value.700.value}" },
-                "border": { "value": "{dark-color.error.palette.value.700.value}" },
-                "icon": { "value": "{dark-color.error.default.value}" }
+                "background": { "value": "{dark-color-scheme.error.palette.value.700.value}" },
+                "border": { "value": "{dark-color-scheme.error.palette.value.700.value}" },
+                "icon": { "value": "{dark-color-scheme.error.default.value}" }
             },
             "warning": {
-                "background": { "value": "{dark-color.warning.palette.value.700.value}" },
-                "border": { "value": "{dark-color.warning.palette.value.700.value}" },
-                "icon": { "value": "{dark-color.warning.default.value}" }
+                "background": { "value": "{dark-color-scheme.warning.palette.value.700.value}" },
+                "border": { "value": "{dark-color-scheme.warning.palette.value.700.value}" },
+                "icon": { "value": "{dark-color-scheme.warning.default.value}" }
             },
             "success": {
-                "background": { "value": "{dark-color.success.palette.value.700.value}" },
-                "border": { "value": "{dark-color.success.palette.value.700.value}" },
-                "icon": { "value": "{dark-color.success.default.value}" }
+                "background": { "value": "{dark-color-scheme.success.palette.value.700.value}" },
+                "border": { "value": "{dark-color-scheme.success.palette.value.700.value}" },
+                "icon": { "value": "{dark-color-scheme.success.default.value}" }
             },
             "info": {
-                "background": { "value": "{dark-color.info.palette.value.700.value}" },
-                "border": { "value": "{dark-color.info.palette.value.700.value}" },
-                "icon": { "value": "{dark-color.info.default.value}" }
+                "background": { "value": "{dark-color-scheme.info.palette.value.700.value}" },
+                "border": { "value": "{dark-color-scheme.info.palette.value.700.value}" },
+                "icon": { "value": "{dark-color-scheme.info.default.value}" }
             },
             "default": {
-                "background": { "value": "{dark-color.second.palette.value.700.value}" },
-                "border": { "value": "{dark-color.second.palette.value.700.value}" },
-                "icon": { "value": "{dark-color.second.default.value}" }
+                "background": { "value": "{dark-color-scheme.second.palette.value.700.value}" },
+                "border": { "value": "{dark-color-scheme.second.palette.value.700.value}" },
+                "icon": { "value": "{dark-color-scheme.second.default.value}" }
             }
         },
         "size": {
