--- a/packages/mosaic/design-tokens/components/checkbox.json5
+++ b/packages/mosaic/design-tokens/components/checkbox.json5
@@ -1,28 +1,28 @@
 {
     "checkbox": {
-        "light-color": {
-            "border": { "value": "{light-color.second.palette.value.300.value}" },
+        "light-color-scheme": {
+            "border": { "value": "{light-color-scheme.second.palette.value.300.value}" },
             "states": {
                 "checked": {
-                    "border": { "value": "{light-color.primary.palette.value.600.value}" },
-                    "background": { "value": "{light-color.primary.palette.value.500.value}" }
+                    "border": { "value": "{light-color-scheme.primary.palette.value.600.value}" },
+                    "background": { "value": "{light-color-scheme.primary.palette.value.500.value}" }
                 },
                 "focused": {
-                    "border": { "value": "{light-color.primary.palette.value.600.value}" },
-                    "shadow": { "value": "inset 0 0 0 1px {light-color.background.background.value}, 0 0 0 1px {light-color.primary.palette.value.600.value}" }
+                    "border": { "value": "{light-color-scheme.primary.palette.value.600.value}" },
+                    "shadow": { "value": "inset 0 0 0 1px {light-color-scheme.background.background.value}, 0 0 0 1px {light-color-scheme.primary.palette.value.600.value}" }
                 }
             }
         },
-        "dark-color": {
-            "border": { "value": "{dark-color.second.palette.value.400.value}" },
+        "dark-color-scheme": {
+            "border": { "value": "{dark-color-scheme.second.palette.value.400.value}" },
             "states": {
                 "checked": {
-                    "border": { "value": "{dark-color.primary.palette.value.400.value}" },
-                    "background": { "value": "{dark-color.primary.palette.value.600.value}" }
+                    "border": { "value": "{dark-color-scheme.primary.palette.value.400.value}" },
+                    "background": { "value": "{dark-color-scheme.primary.palette.value.600.value}" }
                 },
                 "focused": {
-                    "border": { "value": "{dark-color.primary.palette.value.400.value}" },
-                    "shadow": { "value": "inset 0 0 0 1px {dark-color.background.background.value}, 0 0 0 1px {dark-color.primary.palette.value.400.value}" }
+                    "border": { "value": "{dark-color-scheme.primary.palette.value.400.value}" },
+                    "shadow": { "value": "inset 0 0 0 1px {dark-color-scheme.background.background.value}, 0 0 0 1px {dark-color-scheme.primary.palette.value.400.value}" }
                 }
             }
         },
