--- a/packages/mosaic/design-tokens/components/form-field.json5
+++ b/packages/mosaic/design-tokens/components/form-field.json5
@@ -1,29 +1,29 @@
 {
     "form-field": {
-        "light-color": {
-            "border": { "value": "{light-color.second.default.value}" },
-            "background": { "value": "{light-color.background.background.value}" },
+        "light-color-scheme": {
+            "border": { "value": "{light-color-scheme.second.default.value}" },
+            "background": { "value": "{light-color-scheme.background.background.value}" },
 
             "states": {
                 "hover": {
-                    "border": { "value": "{light-color.second.palette.value.400.value}" }
+                    "border": { "value": "{light-color-scheme.second.palette.value.400.value}" }
                 },
                 "invalid": {
-                    "border": { "value": "{light-color.error.default.value}" },
+                    "border": { "value": "{light-color-scheme.error.default.value}" },
                     "background": { "value": "transparent" }
                 }
             }
         },
-        "dark-color": {
-            "border": { "value": "{dark-color.second.default.value}" },
-            "background": { "value": "{dark-color.background.background.value}" },
+        "dark-color-scheme": {
+            "border": { "value": "{dark-color-scheme.second.default.value}" },
+            "background": { "value": "{dark-color-scheme.background.background.value}" },
 
             "states": {
                 "hover": {
-                    "border": { "value": "{dark-color.second.palette.value.200.value}" }
+                    "border": { "value": "{dark-color-scheme.second.palette.value.200.value}" }
                 },
                 "invalid": {
-                    "border": { "value": "{dark-color.error.default.value}" },
+                    "border": { "value": "{dark-color-scheme.error.default.value}" },
                     "background": { "value": "transparent" }
                 }
             }
