--- a/packages/mosaic/design-tokens/components/link.json5
+++ b/packages/mosaic/design-tokens/components/link.json5
@@ -1,54 +1,54 @@
 {
     "link": {
-        "light-color": {
-            "text": { "value": "{light-color.primary.default.value}" },
+        "light-color-scheme": {
+            "text": { "value": "{light-color-scheme.primary.default.value}" },
 
             "state-hover": {
-                "text": { "value": "{light-color.primary.palette.value.600.value}" }
+                "text": { "value": "{light-color-scheme.primary.palette.value.600.value}" }
             },
             "state-focused": {
-                "outline": { "value": "{light-color.states.focused-color.value}" }
+                "outline": { "value": "{light-color-scheme.states.focused-color.value}" }
             },
 
             "dashed": {
-                "border-bottom": { "value": "rgba({light-color.primary.default.value}, 0.5)" },
+                "border-bottom": { "value": "rgba({light-color-scheme.primary.default.value}, 0.5)" },
 
                 "state-hover": {
-                    "border-bottom": { "value": "rgba({light-color.primary.palette.value.600.value}, 0.5)" }
+                    "border-bottom": { "value": "rgba({light-color-scheme.primary.palette.value.600.value}, 0.5)" }
                 }
             },
 
             "underlined": {
-                "border-bottom": { "value": "rgba({light-color.primary.default.value}, 0.32)" },
+                "border-bottom": { "value": "rgba({light-color-scheme.primary.default.value}, 0.32)" },
 
                 "state-hover": {
-                    "border-bottom": { "value": "rgba({light-color.primary.palette.value.600.value}, 0.32)" }
+                    "border-bottom": { "value": "rgba({light-color-scheme.primary.palette.value.600.value}, 0.32)" }
                 }
             }
         },
-        "dark-color": {
-            "text": { "value": "{light-color.primary.default.value}" },
+        "dark-color-scheme": {
+            "text": { "value": "{light-color-scheme.primary.default.value}" },
 
             "state-hover": {
-                "text": { "value": "{dark-color.primary.palette.value.300.value}" }
+                "text": { "value": "{dark-color-scheme.primary.palette.value.300.value}" }
             },
 
             "state-focused": {
-                "outline": { "value": "{dark-color.states.focused-color.value}" }
+                "outline": { "value": "{dark-color-scheme.states.focused-color.value}" }
             },
 
             "dashed": {
-                "border-bottom": { "value": "rgba({light-color.primary.default.value}, 0.5)" },
+                "border-bottom": { "value": "rgba({light-color-scheme.primary.default.value}, 0.5)" },
 
                 "state-hover": {
-                    "border-bottom": { "value": "rgba({light-color.primary.palette.value.300.value}, 0.5)" }
+                    "border-bottom": { "value": "rgba({light-color-scheme.primary.palette.value.300.value}, 0.5)" }
                 }
             },
             "underlined": {
-                "border-bottom": { "value": "rgba({light-color.primary.default.value}, 0.32)" },
+                "border-bottom": { "value": "rgba({light-color-scheme.primary.default.value}, 0.32)" },
 
                 "state-hover": {
-                    "border-bottom": { "value": "rgba({light-color.primary.palette.value.300.value}, 0.32)" }
+                    "border-bottom": { "value": "rgba({light-color-scheme.primary.palette.value.300.value}, 0.32)" }
                 }
             }
         },
