--- a/packages/mosaic/design-tokens/components/radio.json5
+++ b/packages/mosaic/design-tokens/components/radio.json5
@@ -1,36 +1,36 @@
 {
     "radio": {
-        "light-color": {
-            "outer-circle-border": { "value": "{light-color.second.palette.value.300.value}" },
+        "light-color-scheme": {
+            "outer-circle-border": { "value": "{light-color-scheme.second.palette.value.300.value}" },
             "inner-circle-border": { "value": "transparent" },
 
             "states": {
                 "checked": {
-                    "outer-circle-border": { "value": "{light-color.primary.palette.value.500.value}" },
-                    "inner-circle-border": { "value": "{light-color.primary.palette.value.500.value}" }
+                    "outer-circle-border": { "value": "{light-color-scheme.primary.palette.value.500.value}" },
+                    "inner-circle-border": { "value": "{light-color-scheme.primary.palette.value.500.value}" }
 
                 },
                 "focused": {
-                    "outer-circle-border": { "value": "{light-color.states.focused-color.value}" },
-                    "outer-circle-shadow": { "value": "0 0 0 2px {light-color.second.palette.value.300.value}" },
-                    "inner-circle-shadow": { "value": "0 0 0 1px {light-color.background.background.value}" }
+                    "outer-circle-border": { "value": "{light-color-scheme.states.focused-color.value}" },
+                    "outer-circle-shadow": { "value": "0 0 0 2px {light-color-scheme.second.palette.value.300.value}" },
+                    "inner-circle-shadow": { "value": "0 0 0 1px {light-color-scheme.background.background.value}" }
                 }
             }
         },
-        "dark-color": {
-            "outer-circle-border": { "value": "{dark-color.second.palette.value.400.value}" },
+        "dark-color-scheme": {
+            "outer-circle-border": { "value": "{dark-color-scheme.second.palette.value.400.value}" },
             "inner-circle-border": { "value": "transparent" },
 
             "states": {
                 "checked": {
-                    "outer-circle-border": { "value": "{dark-color.primary.palette.value.400.value}" },
-                    "inner-circle-border": { "value": "{dark-color.primary.palette.value.600.value}" }
+                    "outer-circle-border": { "value": "{dark-color-scheme.primary.palette.value.400.value}" },
+                    "inner-circle-border": { "value": "{dark-color-scheme.primary.palette.value.600.value}" }
                 },
                 "focused": {
-                    "outer-circle-border": { "value": "{dark-color.states.focused-color.value}" },
-                    "outer-circle-shadow": { "value": "0 0 0 2px {dark-color.states.focused-color.value}" },
+                    "outer-circle-border": { "value": "{dark-color-scheme.states.focused-color.value}" },
+                    "outer-circle-shadow": { "value": "0 0 0 2px {dark-color-scheme.states.focused-color.value}" },
 
-                    "inner-circle-shadow": { "value": "0 0 0 1px {dark-color.background.background.value}" }
+                    "inner-circle-shadow": { "value": "0 0 0 1px {dark-color-scheme.background.background.value}" }
                 }
             }
         },
