--- a/packages/mosaic/design-tokens/components/sidepanel.json5
+++ b/packages/mosaic/design-tokens/components/sidepanel.json5
@@ -1,10 +1,10 @@
 {
     "sidepanel": {
-        "light-color": {
-            "border": { "value": "{light-color.second.palette.value.300.value}" }
+        "light-color-scheme": {
+            "border": { "value": "{light-color-scheme.second.palette.value.300.value}" }
         },
-        "dark-color": {
-            "border": { "value": "{dark-color.second.palette.value.800.value}" }
+        "dark-color-scheme": {
+            "border": { "value": "{dark-color-scheme.second.palette.value.800.value}" }
         },
         "size": {},
         "font": {}
