--- a/packages/mosaic/design-tokens/components/tabs.json5
+++ b/packages/mosaic/design-tokens/components/tabs.json5
@@ -1,12 +1,12 @@
 {
     "tabs": {
-        "light-color": {
-            "border": { "value": "{light-color.second.palette.value.300.value}" },
-            "state-active": { "value": "{light-color.primary.palette.value.500.value}" }
+        "light-color-scheme": {
+            "border": { "value": "{light-color-scheme.second.palette.value.300.value}" },
+            "state-active": { "value": "{light-color-scheme.primary.palette.value.500.value}" }
         },
-        "dark-color": {
-            "border": { "value": "{dark-color.second.palette.value.300.value}" },
-            "state-active": { "value": "{dark-color.primary.palette.value.400.value}" }
+        "dark-color-scheme": {
+            "border": { "value": "{dark-color-scheme.second.palette.value.300.value}" },
+            "state-active": { "value": "{dark-color-scheme.primary.palette.value.400.value}" }
         },
         "size": {
             "height": { "value": "40px" },
