tokens.css -> css-tokens.css

--- a/packages/mosaic/design-tokens/config.json5
+++ b/packages/mosaic/design-tokens/config.json5
@@ -23,7 +23,7 @@
             "transformGroup": "mc/css",
             "files": [
                 {
-                    "destination": "tokens.css",
+                    "destination": "css-tokens.css",
                     "format": "css/variables",
                     "filter": "notPalette",
                     "prefix": "mc"
